Add dialog on data changes
This simulates calling the server and getting a list of participant matches.

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,5 @@ block content
   #Main
   script(src="Main.js")
   script.
-    var options = { name: 'Hello World' },
-    mountNode = document.getElementById('Main'),
-    app = Elm.Main.embed(mountNode, options);
+    var  mountNode = document.getElementById('Main'),
+    app = Elm.Main.embed(mountNode);
