Add basic stylesheet

--- a/src/layout.pug
+++ b/src/layout.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel="shortcut icon", href="images/favicon.ico", type="image/x-icon")
+    link(rel='stylesheet', href='/styles/stylesheet.css')
   body
     block content
